# graphql-minify-rs

./: Cargo.toml  LICENSE  README.md
data/: kitchen_sink_query.gql  kitchen_sink_query_expected.gql  kitchen_sink_schema.gql  kitchen_sink_schema_expected.gql
src/: block_string.rs  lexer.rs  lib.rs  minify.rs
www/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
www/data/: example_query.gql
www/minify-wasm/: Cargo.toml
www/minify-wasm/src/: lib.rs
www/src/: App.tsx  Minify.tsx  index.css  registerGraphQL.ts
www/src/pkg/: minify_wasm.d.ts  minify_wasm.js  minify_wasm_bg.js  minify_wasm_bg.wasm  minify_wasm_bg.wasm.d.ts  package.json
